k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-1
spec:
  selector:
    app: hello
  ports:
    - port: 9001
      name: hello-1
  type: ClusterIP
