k8s/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: backend
spec:
  ingressClassName: "nginx"
  rules:
    - host: wiki.qlime.cn
      http:
        paths:
          - backend:
              service:
                name: hello
                port:
                  number: 80
            pathType: Prefix
            path: /
