k8s/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: backend
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: "nginx"

  tls:
    - hosts:
        - wiki.qlime.cn
      secretName: https-tls
  rules:
    - host: wiki.qlime.cn
      http:
        paths:
          - backend:
              service:
                name: hello
                port:
                  number: 80
            pathType: Prefix
            path: /
